Correção e adicionados comentários
Correção e adicionados comentários mais limpos e de fácil percepção.

--- a/frontend/Gestor-Tarefas/index.html
+++ b/frontend/Gestor-Tarefas/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
   <head>
+    <!-- Define a codificação de caracteres para UTF-8 -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Ícone do site (favicon) -->
+    <link rel="icon" type="image/svg+xml" href="" />
+
+    <!-- Define a viewport para tornar o site responsivo em dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Título da aplicação que aparece na aba do navegador -->
     <title>Gestor de Tarefas</title>
   </head>
   <body>
+    <!-- Elemento root onde a aplicação React será montada -->
     <div id="root"></div>
+
+    <!-- Script principal da aplicação (Vite usa modules) -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
